适配 JDK8 语法