@@ -12,6 +12,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 /**
  * Bean 导出器（导出成 CSV 文件）
@@ -160,7 +161,7 @@ public class DefaultBeanExporter implements BeanExporter {
             List<ExportField> fields = fieldResolver.resolve(beanClass)
                     .stream()
                     .filter(field -> field.onlyIf(paraMap))
-                    .toList();
+                    .collect(Collectors.toList());
             writer.writeStart(fields);
             while (exportingThreads.get() >= maxExportingThreads) {
                 // 进入等待状态，等钱前面导出的人结束
